fixing text errors along with background div overlapping

--- a/static/recommendations_style.css
+++ b/static/recommendations_style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins:wght@500;800&display=swap');
-html{
+
+html {
     min-height: 100%;
 }
 
@@ -24,6 +25,7 @@ body {
     float: right;
     display: block;
     color: black;
+    font-weight: 500;
     text-align: center;
     padding: 18px 14px;
     text-decoration: none;
@@ -33,6 +35,7 @@ body {
 
 .fixed_header a:hover {
     background: rgba(213, 132, 202, 1);
+    text-decoration: none;
     color: white;
 }
 
@@ -48,14 +51,16 @@ img {
     margin: 0 auto;
     text-align: center;
     margin-top: 34px;
-    
+
 }
-.content h1{
+
+.content h1 {
     font-size: 46px;
     letter-spacing: 1px;
     font-weight: 800;
 }
-.content h4{
+
+.content h4 {
     font-size: 25px;
     font-weight: 500;
     letter-spacing: 1px;
@@ -82,16 +87,19 @@ img {
     text-decoration: none;
     color: rgb(231, 244, 255);
 }
-.artists-grid a:hover{
-    color:rgb(16, 20, 95);
+
+.artists-grid a:hover {
+    color: rgb(16, 20, 95);
     text-decoration: none;
 }
-.input-group .btn-primary{
-    background-color: rgb(100,119,202);
-    border-color: rgb(100,119,202);
+
+.input-group .btn-primary {
+    background-color: rgb(100, 119, 202);
+    border-color: rgb(100, 119, 202);
     width: 100%;
 }
-.input-group .btn-primary:hover{
+
+.input-group .btn-primary:hover {
     background-color: rgb(88, 105, 177);
     border-color: rgb(88, 105, 177);
 }
